# resume_parser

./: Dockerfile  README.md  main.py  pyproject.toml  resume_class.py  resume_parser_agent.py
.github/workflows/: sync-to-hf.yml
