[project]
name = "resume-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "openai-agents>=0.2.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pydantic[email]>=2.11.7",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
